# EMSE2024-micro-commits-replication

./: .gitignore  README.md
appendix/: 01_rule.py
data_collection/: 01_intersection.py  02_make_table.py
discussion/: 01_1_prepare_data.py  01_2_maintenance_commit.py  01_show_data.sh  02_make_table.py  03_make_barplot.R
motivating_example/: 01_oneline_commits.sh
prepare_dataset/: 01_hash_pair.py  02_cregit2org_table.py  03_classify_diff_blocks.py  04_num_tokens_table.py  05_classify_diff_blocks.py  06_num_lines_table.py  07_do-dbs.sh  clone.sh  consolidate.sql  create-tables.sql
python_packages/Utils/: setup.cfg
python_packages/Utils/Utils/: git_reader.py  remove_hunks.py  util.py
python_packages/Utils/Utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rq1/: 01_1_extract_micro_commits.sh  02_1_extract_changed_tokens.py  03_1_analyze.sh  03_2_analyze.R  04_1_make_data.py  05_1_analyze.R
rq2/: 01_num_single_multi_micro_commits.sh  02_make_table.py  03_multi_activity.py
rq2/db/: manual.db
rq3/: 01_heatmap.R  01_heatmap.sh  02_statistics.sh  03_check_value.sh  04_01_extract_num_hunks.sh  04_02_make_plot.R
