[metadata]
name = Utils
version = 1.5.5
author = Masanari Kondo
author_email = kondo@ait.kyushu-u.ac.jp
description = WIP
url = https://github.com/MKmknd/Utils
license_file = LICENSE

[options]
pythonrequire = >=3.5
packages = find:

install_requires =
    pyyaml
    numpy
    scikit-learn
    pyper

